# aoi

./: .gitignore  Cargo.toml  README.md
aoi/: Cargo.toml
aoi/examples/: derive_json.rs
aoi/src/: lib.rs
aoi/src/handler/: mod.rs
aoi/src/request/: mod.rs
aoi/src/response/: into_created.rs  into_error_message.rs  into_ok.rs  json_response.rs  mod.rs
aoi/src/result/: mod.rs
aoi/src/router/: mod.rs  node.rs  pattern.rs
aoi/src/server/: mod.rs
components/: Cargo.toml
components/src/: lib.rs
components/src/header/: mod.rs
components/src/json/: mod.rs
components/src/method/: mod.rs
components/src/request/: buffer.rs  mod.rs  parse.rs  range.rs
components/src/response/: body.rs  mod.rs  status.rs
components/src/result/: mod.rs
macros/: Cargo.toml
macros/src/: internals.rs  lib.rs
macros/src/internals/: server.rs
macros/src/internals/server/: build.rs  interpret.rs  parse.rs
